@@ -58,6 +58,14 @@ one mapper.</p>
     <td align="center" valign="top">No, default is <i>false</i></td>
   </tr>
   <tr>
+    <td valign="top">forwardslash</td>
+    <td valign="top">whether the absolute file names should be passed
+      with forward slashes even if the operating system requires other
+      file separator. The option is ignored if the system file separator
+      is a forward slash.</td>
+    <td align="center" valign="top">No, default is <i>false</i></td>
+  </tr>
+  <tr>
     <td valign="top">os</td>
     <td valign="top">list of Operating Systems on which the command may be
       executed.</td>
@@ -220,7 +228,7 @@ of all files separated by spaces.</p>
 <code>.o</code>, replacing TARGETFILE with the absolute filename of
 the <code>.o</code> and SOURCEFILE with the absolute name of the
 <code>.c</code> file.</p>
-<hr><p align="center">Copyright &copy; 2000-2002 Apache Software Foundation. All rights
+<hr><p align="center">Copyright &copy; 2000-2003 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
